--- a/package.json
+++ b/package.json
@@ -12,20 +12,30 @@
     "@react-navigation/bottom-tabs": "^6.4.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@reduxjs/toolkit": "^1.9.1",
+    "axios": "^1.2.1",
     "expo": "~46.0.16",
+    "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
+    "expo-font": "~10.2.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
+    "lodash.debounce": "^4.0.8",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash.debounce": "^4.0.7",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-redux": "^7.1.24",
     "typescript": "~4.3.5"
   },
   "private": true
