--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,19 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths" : {
+      "@app/*": ["src/*"],
+      "@atoms":["/src/components/atoms/*"],
+      "@molecules":["/src/components/molecules/*"],
+      "@organisms":["/src/components/organisms/*"],
+      "@pages":["/src/components/pages/*"],
+      "@templates":["/src/components/templates/*"],
+      "@assets-image":["/src/assets/images/*"],
+      "@assets-icon":["/src/assets/icons/*"],
+      "@navigation-service":["/src/navigation/navigation-services.tsx"],
+      "@navigation":["/src/navigation/*"]
+    }
   }
 }
