--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^1.9.1",
     "axios": "^1.2.1",
     "expo": "~46.0.16",
+    "expo-av": "~12.0.4",
     "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
@@ -24,7 +25,7 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
-    "react-native-gesture-handler": "^2.8.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
@@ -36,6 +37,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-redux": "^7.1.24",
+    "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
   },
   "private": true
