--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build": "eas build -p android --profile preview"
   },
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.4.0",
@@ -19,9 +20,11 @@
     "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
+    "expo-screen-orientation": "~4.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.29.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
