add sound effect

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
       "@assets-image":["/src/assets/images/*"],
       "@assets-icon":["/src/assets/icons/*"],
       "@navigation-service":["/src/navigation/navigation-services.tsx"],
-      "@navigation":["/src/navigation/*"]
+      "@navigation":["/src/navigation/*"],
+      "@asset/sound":["./assets/sound/*"]
     }
   }
 }
