--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-constants": "~13.2.4",
     "expo-dev-client": "~1.3.1",
     "expo-font": "~10.2.0",
+    "expo-linking": "~3.2.4",
     "expo-screen-orientation": "~4.3.0",
     "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
@@ -29,6 +30,8 @@
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-lightbox-v2": "^0.9.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-web": "~0.18.7",
@@ -39,6 +42,7 @@
     "@types/lodash.debounce": "^4.0.7",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
+    "@types/react-native-modal": "^4.1.1",
     "@types/react-redux": "^7.1.24",
     "babel-plugin-module-resolver": "^4.1.0",
     "typescript": "~4.3.5"
